--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "build": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css --watch"
+    "start": "node ./bin/www & npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css --watch",
+    "dev": "nodemon ./bin/www & npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css --watch"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "env": "^0.0.2",
     "express": "^4.19.2",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
-    "preline": "^2.1.0"
+    "mysql2": "^3.9.7",
+    "nodemon": "^3.1.0",
+    "preline": "^2.1.0",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "sequelize-cli": "^6.6.2",
     "tailwindcss": "^3.4.3"
   }
 }
