--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www & npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css --watch",
-    "dev": "nodemon ./bin/www & npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css --watch"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "tail": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css --watch"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "daisyui": "^4.11.1",
     "sequelize-cli": "^6.6.2",
     "tailwindcss": "^3.4.3"
   }
