--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "flash": "^1.1.0",
+    "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "preline": "^2.1.0",
     "sequelize": "^6.37.3"
   },
