--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@iconify/iconify": "^3.1.1",
+    "@pusher/push-notifications-server": "^1.2.6",
+    "@pusher/push-notifications-web": "^1.1.0",
     "bcrypt": "^5.1.1",
     "connect": "^3.7.0",
     "connect-flash": "^0.1.1",
@@ -29,7 +31,6 @@
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
-    "preline": "^2.1.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
