--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@iconify/iconify": "^3.1.1",
+    "@pusher/push-notifications-server": "^1.2.6",
+    "@pusher/push-notifications-web": "^1.1.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "connect": "^3.7.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
@@ -29,7 +32,7 @@
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
-    "preline": "^2.1.0",
+    "pdfkit": "^0.15.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
